# mrop

./: CMakeLists.txt  package.xml
include/: automatic_controller.h  controls_scaling.h  data_recorder.h  manual_controller.h  mtracker.h  obstacle_controller.h  reference_generator.h  serial.h  simulator.h  state_estimator.h  trajectories.h
launch/: cumulative.launch  mtracker.launch  raw_automatic_controller.launch  raw_manual_controller.launch  raw_manual_controller.launch~  raw_reference_generator.launch  raw_simulator.launch  raw_simulator.launch~  simulator.launch  youbot (copy).launch  youbot.launch
resources/: Network Config Info.txt  TODO.txt  mtracker.rviz
scripts/: mtracker_env.sh  mtracker_start.sh  mtracker_ui_env.sh  mtracker_update.sh  youbot_env.sh  youbot_pc_env.sh
src/: automatic_controller.cpp  controls_scaling.cpp  data_recorder.cpp  manual_controller.cpp  mtracker.cpp  obstacle_controller.cpp  reference_generator.cpp  simulator.cpp  state_estimator.cpp
