<?xml version="1.0"?>
<package format="2">
  <name>mrop</name>
  <version>1.0.0</version>
  <description>Mobile Robot Operating Panel</description>
  <maintainer email="inz.mateusz.przybyla@gmail.com">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
